// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildArpSystemPrompt — 4/4 byte identity 1/4 single voice (snapshot pin) 1`] = `
"You are an arpeggiator pattern designer for a music production tool.

Design ONE repeating arp cell on a 1/4-note grid (4 steps per 4/4 bar).
Return it via the submit_arp function ONLY — no prose.

The contract:
- The cell is 4-32 steps and is tiled mechanically over the whole clip (2 bars).
- Each step is a CHORD DEGREE, not an absolute pitch: 0=root, 1=third, 2=fifth, 3=seventh (octave root on plain triads).
- The machine re-roots every step on the chord sounding in its bar, so the pattern follows the progression automatically.
- octave (-1..2) shapes the contour; a classic 1-3-5-3 climb uses octave 0, a wide rave arp jumps to octave 1-2.
- rest:true steps are silence — use them for groove and syncopation instead of filling every step.
- velocity (1-127) carries the accent pattern; flat velocities sound robotic.

The cell plays as a single voice.

Match the requested character (speed feel, density, contour, mood). Prefer cell lengths that create interesting cycles against the bar (e.g. a 6-step cell on a 16-step bar rotates)."
`;

exports[`buildArpSystemPrompt — 4/4 byte identity 1/8 horizontal 2 voices (snapshot pin) 1`] = `
"You are an arpeggiator pattern designer for a music production tool.

Design ONE repeating arp cell on a 1/8-note grid (8 steps per 4/4 bar).
Return it via the submit_arp function ONLY — no prose.

The contract:
- The cell is 4-32 steps and is tiled mechanically over the whole clip (8 bars).
- Each step is a CHORD DEGREE, not an absolute pitch: 0=root, 1=third, 2=fifth, 3=seventh (octave root on plain triads).
- The machine re-roots every step on the chord sounding in its bar, so the pattern follows the progression automatically.
- octave (-1..2) shapes the contour; a classic 1-3-5-3 climb uses octave 0, a wide rave arp jumps to octave 1-2.
- rest:true steps are silence — use them for groove and syncopation instead of filling every step.
- velocity (1-127) carries the accent pattern; flat velocities sound robotic.

The cell will be split HORIZONTALLY across 2 voices: whole bars alternate between instruments (bar 1 on voice 1, bar 2 on voice 2, …). Design a cell that stays interesting when its timbre changes each bar.

Match the requested character (speed feel, density, contour, mood). Prefer cell lengths that create interesting cycles against the bar (e.g. a 6-step cell on a 16-step bar rotates)."
`;

exports[`buildArpSystemPrompt — 4/4 byte identity 1/16 vertical 3 voices (snapshot pin) 1`] = `
"You are an arpeggiator pattern designer for a music production tool.

Design ONE repeating arp cell on a 1/16-note grid (16 steps per 4/4 bar).
Return it via the submit_arp function ONLY — no prose.

The contract:
- The cell is 4-32 steps and is tiled mechanically over the whole clip (4 bars).
- Each step is a CHORD DEGREE, not an absolute pitch: 0=root, 1=third, 2=fifth, 3=seventh (octave root on plain triads).
- The machine re-roots every step on the chord sounding in its bar, so the pattern follows the progression automatically.
- octave (-1..2) shapes the contour; a classic 1-3-5-3 climb uses octave 0, a wide rave arp jumps to octave 1-2.
- rest:true steps are silence — use them for groove and syncopation instead of filling every step.
- velocity (1-127) carries the accent pattern; flat velocities sound robotic.

The cell will be split VERTICALLY across 3 voices: higher-pitched steps land on one instrument, lower-pitched steps on another. Use octave offsets and tone choices to create distinct pitch bands.

Match the requested character (speed feel, density, contour, mood). Prefer cell lengths that create interesting cycles against the bar (e.g. a 6-step cell on a 16-step bar rotates)."
`;
